# midilooper

./: CMakeLists.txt  README.md  manifest.ttl.in  midilooper.ttl
src/: midilooper.cpp  uris.h
